# stealth-browser-mcp

./: .gitignore  CHANGELOG.md  COMPARISON.md  Checklist.md  Dockerfile  HALL_OF_FAME.md  README.md  SECURITY.md  pyproject.toml  render.yaml  requirements.txt  smithery.yaml  start.sh
demo/: README.md
examples/: claude_prompts.md
src/: browser_manager.py  debug_logger.py  dom_handler.py  dynamic_hook_ai_interface.py  file_based_element_cloner.py  models.py  network_interceptor.py  platform_utils.py  server.py
