[project]
name = "stealth-browser-mcp"
version = "1.0.0"
description = "Ultimate undetectable browser automation MCP server with CDP-level access"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vibhek Soni", email = "vibheksoni@engineer.com"},
]

# Runtime dependencies
dependencies = [
    "fastmcp==2.11.2",
    "nodriver==0.47.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "py2js @ git+https://github.com/am230/py2js.git@31a83c7c25a51ab0cc3255f484a2279d26278ec3",
    "jsbeautifier==1.15.4",
    "strinpy==0.0.4",
    "strbuilder==1.1.3",
]

# Development dependencies (optional)
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

# Repository metadata
[project.urls]
Homepage = "https://github.com/vibheksoni/stealth-browser-mcp"
Documentation = "https://github.com/vibheksoni/stealth-browser-mcp#readme"
Repository = "https://github.com/vibheksoni/stealth-browser-mcp.git"
Issues = "https://github.com/vibheksoni/stealth-browser-mcp/issues"

# Code formatting
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true